--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditeCerficCompany.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditeCerficCompany.form
@@ -556,7 +556,7 @@
               </dync:attribute>
             </form:attributes>
           </form:control>
-          <form:child xsi:type="form:Field" binding="$params.carNumbe" id="carNumber" name="可用车辆数">
+          <form:child xsi:type="form:Field" binding="$params.carNumber" id="carNumber" name="可用车辆数">
             <form:control type="widget/text">
               <form:attributes source="widget/text">
                 <dync:attribute default="6" group="基本设置" id="span" name="占位数" value="12">
