--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInfoEdit_dlg.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInfoEdit_dlg.form
@@ -2,15 +2,15 @@
 <form:Form xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dync="http://www.chinacreator.com/platform/mvc/ui/dync" xmlns:form="http://www.chinacreator.com/platform/mvc/form" name="分供方信息管理编辑" sn="shipperInfoEdit_dlg" type="form">
   <form:control type="page/normal">
     <form:attributes source="page/normal">
-      <dync:attribute default="" group="事件" id="onload" name="页面加载完成" value="page_onload()">
-        <dync:render colSpan="2" height="0" multi="false" name="event">
-          <dync:item name="param" value=""/>
-        </dync:render>
-        <dync:children/>
-      </dync:attribute>
       <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render colSpan="2" height="0" multi="false" name="event">
           <dync:item name="param" value="$params"/>
+        </dync:render>
+        <dync:children/>
+      </dync:attribute>
+      <dync:attribute default="" group="事件" id="onload" name="页面加载完成" value="page_onload()">
+        <dync:render colSpan="2" height="0" multi="false" name="event">
+          <dync:item name="param" value=""/>
         </dync:render>
         <dync:children/>
       </dync:attribute>
@@ -400,7 +400,12 @@
       </form:child>
       <form:child xsi:type="form:Field" binding="$model.e_shipper.desc" id="desc" name="备注">
         <form:control type="widget/textarea">
-          <form:attributes source="widget/textarea"/>
+          <form:attributes source="widget/textarea">
+            <dync:attribute default="12" group="HTML设置" id="span" name="占位数" value="6">
+              <dync:render colSpan="1" height="0" multi="false" name="text"/>
+              <dync:children/>
+            </dync:attribute>
+          </form:attributes>
         </form:control>
       </form:child>
       <form:child xsi:type="form:Field" binding="$model.e_shipper.roadLicence" id="roadLicence" name="道路经营许可证">
@@ -410,7 +415,12 @@
       </form:child>
       <form:child xsi:type="form:Field" binding="$model.e_shipper.roadLicenceFilepath" id="roadLicenceFilepath" name="道路经营许可证照片">
         <form:control type="widget/text">
-          <form:attributes source="widget/text"/>
+          <form:attributes source="widget/text">
+            <dync:attribute default="true" group="文本框设置" id="show" name="可见" value="false">
+              <dync:render colSpan="1" height="0" multi="false" name="checkboxAndExpr"/>
+              <dync:children/>
+            </dync:attribute>
+          </form:attributes>
         </form:control>
       </form:child>
       <form:child xsi:type="form:Field" binding="$model.e_shipper.dispatchUser" id="dispatchUser" name="调度责任人">
@@ -1419,7 +1429,6 @@ getiIndex:function(){
 page_onload:function(){
 	var shippperid=window.parent.angular.element(&quot;#indexConScope&quot;).scope().shippperid;
 	$params.info=shippperid;
-
 	$http.post(&quot;ws/s_getShipperFromCrmById&quot;,{&quot;shipperId&quot;:$params.info.shipperId})
 		.success(function(data){
 			console.info(data.result);
@@ -1640,7 +1649,7 @@ button5_click:function($event){
 			return;
 		}
 		var regular = /^(\d{16}|\d{19})$/;
-		if(!regular.test(accountRoData[i].accountNumber)){
+		if(!regular.test(listAccountList[i].accountNumber)){
 			Messenger.post({message:&quot;账户信息中有帐号填写不正确！&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
 			return;
 		}
@@ -1656,6 +1665,7 @@ button5_click:function($event){
 		listAccountList[i].id = listAccountList[i].idcrm;
 		accountList[i] = listAccountList[i];
 	}
+	
 	//$params.info=shippperid;
 	Messenger.post({message:&quot;正在更新基础信息&quot;,type:&quot;info&quot;,hideAfter:2,showCloseButton:true});
 	var con={&quot;joinFlag&quot;:$params.info.joinFlag,&quot;joinId&quot;:$params.info.joinId,&quot;auditId&quot;:$params.info.lineId};
